retrieveUnpackaged/objects/Patient__c.object
<CustomObject>
    <fields>
        <fullName>Birthdate__c</fullName>
        <description>DateOfBirth /</description>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City /</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClinicalStudiesCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <description>/</description>
        <label>Clinical Studies Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConsentApproval__c</fullName>
        <description>ConsentApproval /</description>
        <label>Consent approval</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country / ISO 3166 Country Code</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email /</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>/</description>
        <label>Fax</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>FirstGivenName /</description>
        <label>First Given Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Gender /</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <description>HomePhone /</description>
        <label>Home Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseNumber__c</fullName>
        <description>/</description>
        <label>House Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InactiveDate__c</fullName>
        <description>/</description>
        <label>Inactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InactiveReason__c</fullName>
        <description>/</description>
        <label>Inactive Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Definitely Explanted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>/</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InsuranceName__c</fullName>
        <description>InsuranceName /</description>
        <label>Insurance Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language / ISO 639 Language code</description>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>LastName /</description>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystemName__c</fullName>
        <description>TBD / Optional Field: Name of the legacy system, this field was migrated from</description>
        <label>Legacy System Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaidenName__c</fullName>
        <description>MaidenName /</description>
        <label>Maiden Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketingInformation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>MarketingInformation /</description>
        <label>Marketing Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <description>MiddleName /</description>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <description>MobilePhone /</description>
        <label>Mobile Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficePhone__c</fullName>
        <description>OfficePhone /</description>
        <label>Office Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PatientIdLs__c</fullName>
        <description>ExternalPatientId / Patient id migrated from the legacy systems (Adonix, DataFlo)</description>
        <externalId>true</externalId>
        <label>Patient Id LS</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PatientId__c</fullName>
        <description>ExternalPatientId /</description>
        <displayFormat>P{000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Patient Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PatientInsuranceId__c</fullName>
        <description>PatientInsuranceId /</description>
        <label>Patient Insurance ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <description>PostalCode /</description>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State /</description>
        <label>State / Prov</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street &amp; StreetNumber /</description>
        <label>Street / Nr</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Patient</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PatientIdLs__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NoConsent</fullName>
        <columns>NAME</columns>
        <columns>PatientIdLs__c</columns>
        <columns>ConsentApproval__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ConsentApproval__c</field>
            <operation>notEqual</operation>
            <value>Yes</value>
        </filters>
        <label>No Consent</label>
    </listViews>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Inactive_Patient</fullName>
        <active>true</active>
        <description>If a Patient gets set to inactive, a reason and a date are mandatory</description>
        <errorConditionFormula>AND( Inactive__c == true,  OR( ISBLANK( TEXT(InactiveReason__c )), ISNULL( InactiveDate__c  ) ))</errorConditionFormula>
        <errorMessage>Please provide a reason and a date for the inactivation of this patient</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PostalCode_AU</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(ISBLANK( Street__c ),NOT( ISBLANK( PostalCode__c ) )),
AND(  NOT( ISBLANK( Street__c ) ) , ISPICKVAL(Country__c, &quot;AU&quot;),NOT(REGEX(PostalCode__c  ,&quot;\\d{0,7}$&quot;)))
)</errorConditionFormula>
        <errorMessage>Invalid postal code format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PostalCode_CA</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISPICKVAL(Country__c, &quot;EC&quot;),
NOT(REGEX(  PostalCode__c  ,&quot;((?i)[ABCEGHJKLMNPRSTVXY]\\d[A-Z]?\\s?\\d[A-Z]\\d)?&quot;)))</errorConditionFormula>
        <errorMessage>Postal code has wrong format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PostalCode_IL</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(ISBLANK( Street__c ),NOT( ISBLANK( PostalCode__c ) )),
AND( NOT( ISBLANK( Street__c ) ) ,  ISPICKVAL(Country__c, &quot;IL&quot;),
NOT(REGEX(  PostalCode__c  ,&quot;\\d{5,5}$&quot;)))
)</errorConditionFormula>
        <errorMessage>Invalid postal code format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PostalCode_NO</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(ISBLANK( Street__c ),NOT( ISBLANK( PostalCode__c ) )),
AND(  NOT( ISBLANK( Street__c ) ) , ISPICKVAL(Country__c, &quot;NO&quot;),
NOT(REGEX(  PostalCode__c  ,&quot;\\d{4,4}$&quot;)))
)</errorConditionFormula>
        <errorMessage>Invalid postal code format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PostalCode_NZ</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(ISBLANK( Street__c ),NOT( ISBLANK( PostalCode__c ) )),
AND(  NOT( ISBLANK( Street__c ) ) , ISPICKVAL(Country__c, &quot;NZ&quot;), NOT(REGEX(  PostalCode__c  ,&quot;\\d{4,4}$|\\d{0,0}$&quot;)))
)</errorConditionFormula>
        <errorMessage>Invalid postal code format</errorMessage>
    </validationRules>
</CustomObject>